# 42Cursus

./: .gitignore  CMakeLists.txt  README.md
born2beroot/: signature.txt
fdf/: Makefile  fdf  fdf.h  ft_atoi_base.c  ft_color.c  ft_draw.c  ft_fdf.c  ft_hooks.c  ft_map.c  ft_menu.c  main.c
fdf/getNextLine/: get_next_line.c  get_next_line.h
fdf/libft/: Makefile  ft_isalnum.c  ft_isalpha.c  ft_lstadd_back.c  ft_substr.c  libft.h
fractol/: Makefile  README.md  fractol  fractol.h
fractol/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_conversions.c  ft_conversions_h.c  ft_isascii.c  ft_isprint.c  ft_itoa.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memcmp.c  ft_printf.c  ft_putc.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_putx.c  ft_split.c  ft_strdup.c  ft_striteri.c  ft_strlen.c  ft_strncmp.c  ft_strrchr.c  ft_strtof.c  ft_strtrim.c  ft_tolower.c  ft_toupper.c  libft.h
fractol/src/: color_utils.c  draw.c  error.c  hooks.c  julia.c  key_hooks.c  main.c  mandelbrot.c  mouse_hooks.c  utils.c
getNextLine/: file  file_bonus  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstmap.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putnbr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_substr.c  libft.h
libft/test/: main.c  util.c
minishell/: minishell.h
minitalk/: Makefile  client  client.c  server  server.c
philosophers/: ft_philosophers.c  ft_philosophers.h  p
philosophers/1/: Makefile  README.md  philo
philosophers/1/src/: action.c  error.c  ft_atoi.c  main.c  philosophers.c  philosophers.h  set.c  util.c
philosophers/3/: Makefile  philosophers.h
philosophers/3/src/: atoitoa.c  init.c  philo_functions.c  philosophers.c  threads.c  utils.c
printf/: Makefile  a.out  ft_bonus.c  ft_conversions.c  ft_conversions_h.c  ft_flags.c  ft_flags_utils.c  ft_itoa.c  ft_libft.c  ft_print_char.c  ft_print_flag.c  ft_printf.c  ft_printf.h  ft_printf_itoa.c  ft_printf_utoa.c  ft_printf_xtoa.c  ft_putc.c  ft_putn.c  ft_putp.c  ft_puts.c  ft_putshex.c  ft_putsx.c  ft_putu.c  ft_putx.c  ft_utoa.c  ft_xtoa.c  main.c
pushSwap/: Makefile  checker  checker.c  ft_error.c  ft_find.c  ft_libft.c  ft_lst.c  ft_operation.c  ft_p.c  ft_place.c  ft_r.c  ft_rr.c  ft_s.c  ft_sort.c  ft_stack.c  pushSwap  push_swap  push_swap.c  push_swap.h
pushSwap/lib/: libft.h
pushSwap/libft/: Makefile  ft_calloc.c  ft_memmove.c  ft_strjoin.c  libft.h
soLong/: Makefile  fdf.h  ft_atoi_base.c  ft_draw.c  ft_draw_map.c  ft_error.c  ft_hook.c  ft_hook_h1.c  ft_hook_h2.c  ft_map.c  ft_menu.c  ft_parse_map.c  ft_so_long.c  ft_solong.c  so_long  so_long.c  so_long.h  solong
soLong/MLX42/: CMakeCache.txt  Makefile  cmake_install.cmake
soLong/MLX42/docs/: Colors.md
soLong/MLX42/include/MLX42/: MLX42_Int.h
soLong/MLX42/include/lodepng/: lodepng.h
soLong/MLX42/lib/png/: lodepng.c
soLong/MLX42/src/font/: font.h  mlx_font.c
soLong/MLX42/src/textures/: mlx_xpm42.c
soLong/MLX42/tools/: compile_shader.sh
soLong/getNextLine/: get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c
soLong/libft/: Makefile  ft_arrlen.c  ft_calloc.c  ft_file.c  ft_isdigit.c  ft_memchr.c  ft_memset.c  ft_putchar_fd.c  ft_strjoin.c  ft_strnstr.c  ft_substr.c  libft.h
soLong/maps/: 1.ber  2.ber  3.ber  error1.ber  error2.ber  error4.ber  error6.ber  error7.ber  error8.ber  large.ber  map.ber
test/: Makefile  main.c
